force-app/main/default/objects/Branch__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Lookup</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Branch__c.RecordType.Id</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <infoMessage>Select a record type</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Branches</relationshipLabel>
    <relationshipName>Branches</relationshipName>
    <type>Lookup</type>
</CustomField>