force-app/main/default/objects/Branch__c/fields/Branch_Description__c.field-meta.xml
<CustomField>
    <fullName>Branch_Description__c</fullName>
    <label>Branch Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>