force-app/main/default/objects/Branch__c/fields/Deployment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Mode__c</fullName>
    <label>CI Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VALIDATE</fullName>
            </value>
            <value>
                <fullName>DEPLOY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>