force-app/main/default/objects/Branch__c/fields/Enforce_pull_request__c.field-meta.xml
<CustomField>
    <fullName>Enforce_pull_request__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enforce Peer Review at Branch</label>
    <type>Checkbox</type>
</CustomField>