force-app/main/default/objects/Branch__c/fields/isArchived__c.field-meta.xml
<CustomField>
    <fullName>isArchived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isArchived</label>
    <type>Checkbox</type>
</CustomField>