force-app/main/default/objects/Branch__c/fields/isConflict__c.field-meta.xml
<CustomField>
    <fullName>isConflict__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isConflict</label>
    <type>Checkbox</type>
</CustomField>