force-app/main/default/objects/Branch__c/fields/Last_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_On__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Last Updated On</label>
    <type>DateTime</type>
</CustomField>