force-app/main/default/objects/Branch__c/fields/Repository__c.field-meta.xml
<CustomField>
    <fullName>Repository__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Repository</label>
    <referenceTo>Repository__c</referenceTo>
    <relationshipLabel>Branches</relationshipLabel>
    <relationshipName>Branches</relationshipName>
    <type>Lookup</type>
</CustomField>