force-app/main/default/objects/Branch__c/fields/Repository_Type__c.field-meta.xml
<CustomField>
    <fullName>Repository_Type__c</fullName>
    <formula>TEXT(Repository__r.Repository_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repository Type</label>
    <type>Text</type>
</CustomField>