force-app/main/default/objects/Branch__c/fields/Review_Result__c.field-meta.xml
<CustomField>
    <fullName>Review_Result__c</fullName>
    <label>Number of issues</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>