force-app/main/default/objects/Branch__c/fields/Review_State__c.field-meta.xml
<CustomField>
    <fullName>Review_State__c</fullName>
    <label>Review state</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NEVER REVIEWED</fullName>
                <default>true</default>
                <label>NEVER REVIEWED</label>
            </value>
            <value>
                <fullName>REVIEWED</fullName>
            </value>
            <value>
                <fullName>IN PROGRESS</fullName>
            </value>
            <value>
                <fullName>QUEUED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>