force-app/main/default/objects/Branch__c/fields/Source_Orgs__c.field-meta.xml
<CustomField>
    <fullName>Source_Orgs__c</fullName>
    <label>Source Orgs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>