force-app/main/default/objects/Branch__c/fields/Specified_Tests__c.field-meta.xml
<CustomField>
    <fullName>Specified_Tests__c</fullName>
    <inlineHelpText>Please specify one test class on each line. Please do not use commas to separate the test class names.</inlineHelpText>
    <label>Specified Tests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>