force-app/main/default/objects/Branch__c/fields/Test_Two__c.field-meta.xml
<CustomField>
    <fullName>Test_Two__c</fullName>
    <label>Test Two</label>
    <length>255</length>
    <type>Text</type>
</CustomField>