force-app/main/default/objects/Branch__c/fields/USERNAME__c.field-meta.xml
<CustomField>
    <fullName>USERNAME__c</fullName>
    <label>USERNAME</label>
    <length>150</length>
    <type>Text</type>
</CustomField>