force-app/main/default/objects/Branch__c/recordTypes/Jumbo.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>Jumbo</fullName>
    <label>Jumbo</label>
</RecordType>