force-app/main/default/objects/Branch__c/recordTypes/Marketing_Cloud.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>Marketing_Cloud</fullName>
    <label>Marketing Cloud</label>
</RecordType>