force-app/main/default/objects/Branch__c/recordTypes/Tingu.recordType-meta.xml
<RecordType>
    <active>true</active>
    <description>Desc</description>
    <fullName>Tingu</fullName>
    <label>Tingu</label>
</RecordType>