force-app/main/default/objects/Branch__c/recordTypes/Veeva.recordType-meta.xml
<RecordType>
    <active>true</active>
    <fullName>Veeva</fullName>
    <label>Veeva</label>
</RecordType>