force-app/main/default/objects/Branch__c/validationRules/one.validationRule-meta.xml
<ValidationRule>
    <fullName>one</fullName>
    <active>false</active>
    <description>Branch Validation Rule2</description>
    <errorConditionFormula>Name = null</errorConditionFormula>
    <errorMessage>error</errorMessage>
</ValidationRule>